--- a/OMI/Views/Shared/_MenuIzquierdo.cshtml
+++ b/OMI/Views/Shared/_MenuIzquierdo.cshtml
@@ -127,9 +127,9 @@
                                 <li><a href="@Url.Action("Solicitudes", "Infraestructura")">Alta Inventario</a></li>
                                 <li><a href="@Url.Action("EquipoComputo", "Inventario")">Equipo de Computo</a></li>
                                 <li><a href="@Url.Action("EquipoVarios", "Inventario")">Equipos Varios</a></li>
-                                <li><a href="@Url.Action("index", "home")">Licencia de Software</a></li>
-                                <li><a href="@Url.Action("index", "home")">Vehiculos</a></li>
-                                <li><a href="@Url.Action("index", "home")">Papeleria</a></li>
+                                <li><a href="@Url.Action("Licencia", "Inventario")">Licencia de Software</a></li>
+                                <li><a href="@Url.Action("Vehiculos", "Inventario")">Vehiculos</a></li>
+                                <li><a href="@Url.Action("Papeleria", "Inventario")">Papeleria</a></li>
                             </ul>
                             
                         </li>
