--- a/OMI/Views/Inventario/CreaEquipo.cshtml
+++ b/OMI/Views/Inventario/CreaEquipo.cshtml
@@ -1,5 +1,7 @@
 ﻿@model OIM_DAL.TbInve_Equipo_Comp
-
+@{
+ViewBag.Title="Inventario - Equipo de Computo - Crear ";
+}
 @using (Html.BeginForm())
 {
     <div class="row">
@@ -81,7 +83,7 @@
                             <div class="form-group row">
                                 @Html.LabelFor(model => model.IdUsuario, "IdUsuario", htmlAttributes: new { @class = "control-label col-md-2" })
                                 <div class="col-md-10">
-                                    @Html.DropDownList("Usuario", ViewBag.Usuarios as SelectList, "Seleccione", htmlAttributes: new { @class = "form-control" })
+                                    @Html.DropDownList("IdUsuario", ViewBag.Usuarios as SelectList, "Seleccione", htmlAttributes: new { @class = "form-control" })
 
                                     @Html.ValidationMessageFor(model => model.IdUsuario, "", new { @class = "text-danger" })
 
