--- a/OMI/Views/Organizacion/Reglamento.cshtml
+++ b/OMI/Views/Organizacion/Reglamento.cshtml
@@ -1,19 +1,24 @@
 ﻿
+@{
+    ViewBag.Title = "Organizacíon - Reglamento";
+}
+
 <div class="row">
-    <div class="col-md-12">
-        <div class="panel panel-border panel-primary">
-            <div class="panel-heading">
-                <h3 class="panel-title">Sistema OIM</h3>
-            </div>
+<div class="col-md-12">
+    <div  id="imprimir" class="panel panel-border panel-primary">
+        <div class="panel-heading">
+            <h4 class="panel-title"><i class="fa fa-pencil-square fa-2x" aria-hidden="true"></i>&nbsp;&nbsp;@ViewBag.Title</h4>
+        </div>
+        <div class="panel-body">
             <div style="text-align: center">
-                <h1><span>REGLAMENTO INTERNO DE TRABAJO
+                <h2><span>REGLAMENTO INTERNO DE TRABAJO
                     <br/>
                         INGENIERÍA APLICADA ONEPRO
 
                     </span>
-                </h1>
+                </h2>
             </div>
-            <div class="panel-body" id="Documento">
+            <br/>
                 <p>
                   
                     Ingeniería Aplicada OnePro sostiene un Código de Ética transparente que forma parte de la consolidación de la filosofía que rige a la empresa. 
