--- a/OMI/Views/Shared/_Layout.cshtml
+++ b/OMI/Views/Shared/_Layout.cshtml
@@ -259,6 +259,7 @@
 
 @Styles.Render("~/Content/datatables")
 @Scripts.Render("~/bundles/datatables")
+@Scripts.Render("~/bundles/jspdf")
 @RenderSection("scripts", required: false)
 </body>
 </html>
