--- a/OMI/Views/Inventario/EquipoComputo.cshtml
+++ b/OMI/Views/Inventario/EquipoComputo.cshtml
@@ -5,7 +5,7 @@
 
 <div class="row">
     <div class="col-md-12">
-        <div class="panel panel-border panel-primary">
+        <div  id="imprimir" class="panel panel-border panel-primary">
             <div class="panel-heading">
                 <h4 class="panel-title"><i class="fa fa-pencil-square fa-2x" aria-hidden="true"></i>&nbsp;&nbsp;@ViewBag.Title</h4>
             </div>
@@ -13,95 +13,148 @@
                
                
                 <a type="button" class="btn btn-primary" href=@Url.Action("CreaEquipo") >Nuevo Equipo</a>
-             
-                <table id="assets-data-table" class="table table-striped table-bordered" style="width: 100%">
-                    <thead>
-                    <tr>
-                        <th>
-                            @Html.DisplayNameFor(model=> model.Id)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.Tipo)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.Nombre)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.Numero)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.Serie)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.Procesador)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.Observacion)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.Accesorio)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.FechaAlta)
-                        </th>
-                       
-                        <th>
-                            @Html.DisplayNameFor(model => model.TbUsuario.Nombre)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.Tb_EstadoEquipo.Nombre)
-                        </th>
-                        <th></th>
-                    </tr>
-                    </thead>
-                    <tbody> 
-                    @foreach (var item in Model) {
+              
+             <a type="button" onclick="DescargarPDF('imprimir','Table')" class="btn btn-info"> Imprimir</a>
+                <a type="button" onclick="HTMLtoPDF('imprimir')" class="btn btn-info"> Imprimir</a>
+               
+               
+                    <table id="assets-data-table" class="table table-striped table-bordered" style="width: 100%">
+                        <thead>
                         <tr>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Id)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Tipo)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Nombre)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Numero)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Serie)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Procesador)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Observacion)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Accesorio)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.FechaAlta)
-                            </td>
-                          
-                            <td>
-                                @Html.DisplayFor(modelItem => item.TbUsuario.Nombre)
-                            </td>
-                            <td id="Celda">
-                                @Html.DisplayFor(modelItem => item.Tb_EstadoEquipo.Nombre)
-                            </td>
-                            <td>
-                                @Html.ActionLink("Edit", "EditEquipo", new {id = item.Id}) 
-                            </td>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Id)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Tipo)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Nombre)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Numero)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Serie)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Procesador)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Observacion)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Accesorio)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.FechaAlta)
+                            </th>
+
+                            <th>
+                                @Html.DisplayNameFor(model => model.TbUsuario.Nombre)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Tb_EstadoEquipo.Nombre)
+                            </th>
+                            <th></th>
                         </tr>
-                    }
-                    </tbody>
-                </table>
-            </div>
+                        </thead>
+                        <tbody>
+                        @foreach (var item in Model)
+                        {
+                            <tr>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Id)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Tipo)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Nombre)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Numero)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Serie)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Procesador)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Observacion)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Accesorio)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.FechaAlta)
+                                </td>
+
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.TbUsuario.Nombre)
+                                </td>
+                                <td id="Celda">
+                                    @Html.DisplayFor(modelItem => item.Tb_EstadoEquipo.Nombre)
+                                </td>
+                                <td>
+                                    @Html.ActionLink("Edit", "EditEquipo", new { id = item.Id })
+                                </td>
+                            </tr>
+                        }
+                        </tbody>
+                    </table>
+                    </div>
+               
         </div>
     </div>
 </div>
+@section Scripts
+{
+    <script type="text/javascript">
+        function DescargarPDF(ContenidoID, nombre) {
+            var pdf = new jsPDF('p', 'pt', 'letter');
+            html = $('#' + ContenidoID).html();
+            specialElementHandlers = {};
+            margins = { top: 10, bottom: 20, left: 20, width: 522 };
+            pdf.fromHTML(html,
+                margins.left,
+                margins.top,
+                { 'width': margins.width },
+                function(dispose) { pdf.save(nombre + '.pdf'); },
+                margins);
+        }
 
+        function HTMLtoPDF() {
+            var pdf = new jsPDF('p', 'pt', 'letter');
+            source = document.body;
+            specialElementHandlers = {
+                '#bypassme': function (element, renderer) {
+                    return true
+                }
+            }
+            margins = {
+                top: 50,
+                left: 60,
+                width: 545
+            };
+            pdf.fromHTML(
+                source // HTML string or DOM elem ref.
+                , margins.left // x coord
+                , margins.top // y coord
+                , {
+                    'width': margins.width // max width of content on PDF
+                    , 'elementHandlers': specialElementHandlers
+                },
+                function (dispose) {
+                    // dispose: object with X, Y of the last line add to the PDF
+                    //          this allow the insertion of new lines after html
+                    pdf.save('html2pdf.pdf');
+                }
+            )
+        }
+
+    </script>
+
+}
 
 
