--- a/OMI/Views/Solicitud/AllSolicitud.cshtml
+++ b/OMI/Views/Solicitud/AllSolicitud.cshtml
@@ -2,85 +2,88 @@
 @model IEnumerable<OIM_DAL.TbSolicitud>
 
 @{
-    ViewBag.Title = "AllSolicitud";
+    ViewBag.Title = "Requerimeintos - Solicitudes";
 }
+
+
 <div class="row">
     <div class="col-md-12">
-        <div class="panel panel-border panel-primary">
+        <div id="imprimir" class="panel panel-border panel-primary">
             <div class="panel-heading">
-                <h3 class="panel-title">Ingenieria Aplicada OnePro</h3>
+                <h4 class="panel-title"><i class="fa fa-pencil-square fa-2x" aria-hidden="true"></i>&nbsp;&nbsp;@ViewBag.Title</h4>
             </div>
             <div class="panel-body">
-                <h2>AllSolicitud</h2>
+                
 
                 <p>
                     <a class="btn btn-success" id="NuevoPedido" href="@Url.Action("NuevaSolicitud","Solicitud" ,new { id=-1})">Solicitud de Productos / Servicios</a>
-                  
+
                 </p>
                 <p>
                     <a class="btn btn-success" id="NuevoPersonal" href="@Url.Action("Index","Personal" ,new { id=-1})">Solicitud de Personal</a>
 
                 </p>
-             
+
                 <table id="assets-data-table" class="table table-striped table-bordered" style="width:100%">
-                    <thead>   <tr>
-                        <th>
-                            @Html.DisplayNameFor(model => model.Folio)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.Fecha)
-                        </th>
+                    <thead>
+                        <tr>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Folio)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Fecha)
+                            </th>
 
-                        <th>
-                            @Html.DisplayNameFor(model => model.TbFormato.Nombre)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.TbUsuario.Nombre)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.EnviadoInfra)
-                        </th> 
-                        <th>
-                            Opciones
-                        </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.TbFormato.Nombre)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.TbUsuario.Nombre)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.EnviadoInfra)
+                            </th>
+                            <th>
+                                Opciones
+                            </th>
 
-                    </tr>
+                        </tr>
                     </thead>
                     <tbody>
 
-                    @foreach (var item in Model)
-                    {
-        
+                        @foreach (var item in Model)
+                        {
 
-                        <tr id="@item.IdSolicitud">
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Folio)
-                            </td>
-                            <td >
-                                @Html.DisplayFor(modelItem => item.Fecha)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.TbFormato.Nombre)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.TbUsuario.Nombre)
-                            </td>
-                            <td>
-                                <div id="@item.IdSolicitud">
-                                    @Html.DisplayFor(modelItem => item.EnviadoInfra)
-                                </div>
-                            </td>
-                            
-                            <td>
-                   
-                                @Html.ActionLink("Details", "Details", new {id = item.IdSolicitud, idfor = item.IdFormato })
-                                <span> &#124; </span>
-                                @Html.ActionLink("Delete", "DeleteM", new {id = item.IdSolicitud, idfor = item.IdFormato })
-                              
-                    
-                        </tr>
-         
-                    }
+
+                            <tr id="@item.IdSolicitud">
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Folio)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Fecha)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.TbFormato.Nombre)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.TbUsuario.Nombre)
+                                </td>
+                                <td>
+                                    <div id="@item.IdSolicitud">
+                                        @Html.DisplayFor(modelItem => item.EnviadoInfra)
+                                    </div>
+                                </td>
+
+                                <td>
+
+                                    @Html.ActionLink("Details", "Details", new { id = item.IdSolicitud, idfor = item.IdFormato })
+                                    <span> &#124; </span>
+                                    @Html.ActionLink("Delete", "DeleteM", new { id = item.IdSolicitud, idfor = item.IdFormato })
+
+
+                            </tr>
+
+                        }
                     </tbody>
 
                 </table>
