--- a/OMI/Views/Inventario/EquipoComputo.cshtml
+++ b/OMI/Views/Inventario/EquipoComputo.cshtml
@@ -25,7 +25,7 @@
                                 @Html.DisplayNameFor(model => model.Id)
                             </th>
                             <th>
-                                @Html.DisplayNameFor(model => model.Tipo)
+                                @Html.DisplayNameFor(model => model.Descripcion)
                             </th>
                             <th>
                                 @Html.DisplayNameFor(model => model.Nombre)
